# objpool

./: .gitignore  pyproject.toml
tests/: tests.py
